# new_pt1

./: .dockerignore  .env.example  .gitignore  AUTH_API_POSTMAN.md  BALANCE_DIAGNOSTIC_REPORT.md  Cargo.toml  DOCKER_POSTGRES_SETUP.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_ORDER_FIX.md  LEDGER_INTEGRATION_PLAN.md  LEDGER_INTEGRATION_SUMMARY.md  LEDGER_TEST_RESULTS.md  LIVE_DATA_FIX.md  LOCAL_STARTUP.md  ORDER_FILL_ISSUE_ANALYSIS.md  ORDER_FLOW.md  PLAN_VERIFICATION.md  POSTMAN_WEBSOCKET_GUIDE.md  QUICK_START.md  README.md  ROOT_CAUSE_CONFIRMED.md  ROOT_CAUSE_FINDINGS.md  SERVER_STATUS.md  SETUP.md  START_SERVERS.md  TROUBLESHOOTING_DEPOSIT_APPROVAL.md  WEBSOCKET_BALANCE_FIXES.md  WEBSOCKET_BALANCE_TEST.md  WEBSOCKET_ISSUE_DIAGNOSIS.md  WEBSOCKET_ISSUE_FOUND.md  WEBSOCKET_NEXT_STEPS.md  WEBSOCKET_POSTMAN_TEST.md  WEBSOCKET_TEST.md  WEBSOCKET_TESTING.md  debug-websocket-balance.md  index.html  package-lock.json  package.json  tailwind.config.js  (+8 more)
apps/core-api/: Cargo.toml
apps/core-api/src/: auth.rs  auth_routes.rs  deposits.rs  handlers.rs  leads_routes.rs  main.rs  outbox_publisher.rs  persistence.rs
apps/data-provider/: Cargo.toml
apps/data-provider/src/: health.rs  main.rs
apps/email-worker/: Cargo.toml
apps/email-worker/src/: main.rs
apps/gateway-ws/: .env.example  Cargo.toml
apps/gateway-ws/src/: auth.rs  main.rs  session.rs
apps/order-engine/: Cargo.toml
apps/order-engine/lua/: atomic_cancel_order.lua  atomic_close_position.lua  atomic_fill_order.lua  atomic_reopen_position.lua  atomic_reopen_position_with_params.lua  atomic_update_position_params.lua  check_sltp_triggers.lua
apps/order-engine/src/: config.rs  execution.rs  leverage.rs  main.rs  models.rs  nats.rs  redis.rs  subjects.rs
apps/order-engine/src/engine/: cache.rs  cancel_handler.rs  lua.rs  mod.rs  order_handler.rs  position_events.rs  position_handler.rs  position_tick_unrealized.rs  slippage_reject.rs  sltp_handler.rs  tick_handler.rs  validation.rs  warm_cache.rs
apps/order-engine/src/health/: subscription.rs
apps/order-engine/src/observability/: logging.rs  metrics.rs  mod.rs
apps/order-engine/src/utils/: ids.rs  mod.rs  time.rs
backend/auth-service/: .env  .env.backup  .env.example  Cargo.toml  README.md
backend/auth-service/.sqlx/: query-152622b18708aa5e4a9555120fd46087356b2b7981950a7ebf10bf22708a87b5.json  query-152acbe97a3f910a3a9ce95121bb89f1c540f0ad0671b16af41ed79926660213.json  query-21beb1e41094bc95eaf87f6a86940629d654363832b4cefb9e1e397a5c8bae1d.json  query-3b0a9a0c767115cb8825ead57e103966f892f290ee35694070eeafb380b7f353.json  query-6eb9f88815ab371231e1e55ae2c95d97e376252014a6e71753f8c9ed6b07ddfa.json  query-a8316a1318195fdf75cafe77ce7ec9eada3927ea975bb77e8862d4b4cdbeb109.json  query-fe03507a7fd39104369c501924f75a4e980594fc6ac212217bd1ab28b26bae58.json
backend/auth-service/backend/auth-service/: .env
backend/auth-service/dev-data/: system-stats.example.json
backend/auth-service/migrations/: .gitkeep  20260219100000_create_swap_rules.sql  20260301120000_create_user_terminal_preferences.sql  20260303100000_create_user_notes.sql  20260307100000_create_permission_definitions.sql  20260307120000_grant_v2_profile_all_permissions.sql  20260307130000_split_users_and_groups_categories.sql  20260307140000_add_tags_view_permission.sql  20260307140001_grant_tags_view_to_profiles_with_users_view.sql  20260307150000_ensure_users_page_permissions.sql  20260307160000_add_users_column_permissions.sql  20260307170000_add_tags_category.sql  20260307180000_add_tags_create_edit_delete_permissions.sql  20260307190000_add_groups_delete_symbol_settings_price_profile.sql  20260307200000_add_groups_create_permission.sql  20260307210000_add_groups_tags_permission.sql  20260307220000_add_managers_category_and_permissions.sql  20260307230000_split_trading_and_finance_categories.sql  20260307240000_add_trading_admin_action_permissions.sql  20260307250000_add_leverage_profiles_category.sql  20260307260000_add_leverage_profiles_create_delete.sql  20260307270000_add_symbols_category.sql  20260307280000_add_symbols_create_delete.sql  20260307290000_add_markup_category.sql  20260307300000_add_markup_create_delete.sql  20260307310000_add_swap_category.sql  20260307320000_add_swap_create_delete.sql  20260307330000_add_finance_manual_adjustment.sql  20260307340000_add_affiliate_category.sql  20260307350000_add_affiliate_create_delete.sql  20260307360000_add_support_new_chat_permission.sql  20260307370000_add_call_category_and_permission.sql  20260307380000_add_appointments_category_and_permission.sql  20260307390000_add_appointments_action_permissions.sql  20260307400000_add_settings_category.sql  20260307410000_add_permissions_category.sql  20260307420000_add_users_bulk_create_permission.sql  20260307430000_remove_leads_permissions.sql  20260307430001_remove_leads_profile_grants.sql  20260309100000_create_leads_and_permissions.sql  (+16 more)
backend/auth-service/scripts/: seed_swap_rules.sql
backend/auth-service/src/: lib.rs  main.rs  redis_pool.rs
backend/auth-service/src/db/: mod.rs
backend/auth-service/src/middleware/: auth_middleware.rs  mod.rs
backend/auth-service/src/models/: fee_rule.rs  leverage_profile.rs  market_session.rs  markup_profile.rs  mod.rs  swap_rule.rs  symbol.rs  user.rs  user_group.rs  user_row_sql.rs
backend/auth-service/src/routes/: admin_affiliate.rs  admin_appointments.rs  admin_audit.rs  admin_bonus.rs  admin_bulk.rs  admin_call_records.rs  admin_fees.rs  admin_fx.rs  admin_groups.rs  admin_kyc.rs  ai_chat.rs  (+33 more)
backend/data-provider/: Cargo.toml  README.md  run.sh
backend/data-provider/src/: config.rs  main.rs
backend/ws-gateway/: .env.example  Cargo.toml  README.md
backend/ws-gateway/src/: config.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  ids.rs  lib.rs  time.rs
crates/crm-leads/: Cargo.toml
crates/crm-leads/src/: lib.rs
crates/redis-model/: Cargo.toml
crates/redis-model/lua/: aggregate_user_unrealized_usd_e6.lua
crates/redis-model/src/: keys.rs  lib.rs  models.rs  user_unrealized_agg.rs
(+1236 files in other folders)
