[workspace]
members = [
    "apps/gateway-ws",
    "apps/core-api",
    "apps/order-engine",
    "apps/data-provider",
    "crates/common",
    "crates/contracts",
    "crates/redis-model",
    "crates/risk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Trading Platform Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros", "ws", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "rust_decimal"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Event streaming
async-nats = "0.32"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"

# Decimal
rust_decimal = { version = "1.33", features = ["serde-float"] }

# WebSocket
tokio-tungstenite = "0.21"

# JWT
jsonwebtoken = "9.2"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# OpenAPI (optional - commented out for now)
# utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
# utoipa-swagger-ui = { version = "9.0", features = ["axum_extras"] }

