[package]
name = "core-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "core-api"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-nats = { workspace = true }
redis = { workspace = true }
    sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
common = { path = "../../crates/common" }
contracts = { path = "../../crates/contracts" }
redis-model = { path = "../../crates/redis-model" }
risk = { path = "../../crates/risk" }
futures-util = "0.3"

