[package]
name = "data-provider"
version.workspace = true
edition.workspace = true

[[bin]]
name = "data-provider"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = "1.33"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
common = { path = "../../crates/common" }
contracts = { path = "../../crates/contracts" }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }

