[package]
name = "email-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "email-worker"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-nats = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
common = { path = "../../crates/common" }
crm-leads = { path = "../../crates/crm-leads" }
futures-util = "0.3"
