[package]
name = "gateway-ws"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gateway-ws"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
async-nats = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
rust_decimal = { workspace = true }
dotenv = "0.15"
redis = { version = "0.24", features = ["tokio-comp"] }
common = { path = "../../crates/common" }
contracts = { path = "../../crates/contracts" }

