[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "seed_admin"
path = "src/bin/seed_admin.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "tokio"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "make"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper-util = { version = "0.1", features = ["tokio"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
argon2 = "0.5"
rand = "0.8"

# JWT
jsonwebtoken = "9.2"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Concurrency (per-user account summary serialization)
dashmap = "5.5"

# Futures for parallel operations and streams
futures = { version = "0.3", features = ["std"] }

# Event streaming
async-nats = "0.32"

# Decimal
rust_decimal = { version = "1.33", features = ["serde-float"] }

# Contracts and models (path dependencies)
contracts = { path = "../../crates/contracts" }
redis-model = { path = "../../crates/redis-model" }

