[package]
name = "data-provider"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Decimal for precise calculations
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = "0.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
parking_lot = "0.12"

# HTTP client for health checks
reqwest = { version = "0.11", features = ["json"] }

# NATS for order-engine communication
async-nats = "0.32"

# Contracts for event types
contracts = { path = "../../crates/contracts" }

# Optional: shared Postgres catalog (same DB as auth-service) for MMDPS symbol list
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }

