[package]
name = "crm-leads"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-nats = { workspace = true }
sqlx = { workspace = true }
common = { path = "../common" }
